# printing-press

./: docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  db.sqlite3  pyproject.toml  test.py
backend/api/: auth.py  http.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/api/schemas/: admin.py  login.py  wallet.py
backend/api/utils/: pdf.py
backend/api/views/: add.py  balance.py  charge.py  count.py
backend/api/views/admin/: add.py  charge.py  deposit.py
backend/api/views/transactions/: __init__.py
backend/api/views/user/: login.py  logout.py
backend/apps/api/: admin.py  auth.py  decorators.py  http.py  models.py  urls.py
backend/apps/api/filters/: queue.py  user.py
backend/apps/api/migrations/: 0001_initial.py
backend/apps/api/schemas/: admin.py  balance.py  count.py  printer.py  printer_arrangement.py  queue.py  transaction.py  user.py  wallet.py
backend/apps/api/utils/: docx.py  pdf.py
backend/apps/api/views/: balance.py  charge.py  queue.py  users.py
backend/apps/api/views/admin/: charge.py  deposit.py  queue.py
backend/apps/api/views/admin/balance/: __init__.py
backend/apps/api/views/admin/printers/: __init__.py  (+2 more)
backend/apps/api/views/balance/: __init__.py
backend/apps/api/views/convert/: merge.py  nonblank.py  pdf.py
backend/apps/api/views/merge/: pdf.py
backend/apps/api/views/pdf/: count.py
backend/apps/api/views/printers/: __init__.py
backend/apps/api/views/queue/: __init__.py
backend/apps/api/views/split/: pdf_colors.py
backend/apps/api/views/transactions/: __init__.py
backend/apps/api/views/user/: __init__.py  balance.py  login.py  logout.py  queue.py  transactions.py
backend/apps/printers/: admin.py  apps.py  models.py
backend/apps/printers/migrations/: 0001_initial.py  0002_remove_printers_charge_printers_duplex_charge_and_more.py  0003_rename_model_printers_name_printers_image_and_more.py  0004_printerarrangements_decomissioned.py  0005_printers_decomissioned.py
backend/apps/queue/: admin.py  apps.py  models.py
backend/apps/queue/migrations/: 0001_initial.py  0002_alter_queue_file.py  0003_alter_queue_created_at.py  0004_queue_updated_at_alter_queue_created_at.py  0005_queue_page_count.py  0006_queue_print_mode.py  0007_queue_printer_arrangement_alter_queue_page_count.py
backend/apps/wallet/: admin.py  models.py
backend/apps/wallet/migrations/: 0001_initial.py  0002_alter_transaction_description.py
backend/core/: settings.py  urls.py
backend/scripts/: run-django.sh
backend/wallet/: admin.py  models.py
backend/wallet/migrations/: 0001_initial.py
document-factory/: Cargo.toml
document-factory/src/: lib.rs
(+74 files in other folders)
