[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.4.3",
    "loutils>=1.4.0",
    "pymupdf>=1.26.4",
    "servestatic>=3.1.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.5",
    "ruff>=0.13.3",
]
